infra/vpc.tf
resource "aws_vpc" "altsch_vpc" {
  cidr_block = "10.0.0.0/24"

  enable_dns_hostnames = true
  enable_dns_support   = true

  tags = {
    Name = "${local.env}-altsch_vpc"
  }
}
